deploy/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: g-ui
  labels:
    app: g-ui
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: g-ui
  template:
    metadata:
      name: g-ui
      labels:
        app: g-ui
    spec:
      containers:
        - name: g-ui
          image: vikazeni/g-ui:latest
          imagePullPolicy: Always
      restartPolicy: Always
