deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-ui
spec:
  selector:
    app: g-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
